--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,10 @@
 ---
-name: Run Tests
+name: Publish to PyPI
 
-# yamllint disable-line rule:truthy
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  release:
+    types:
+      - created
 
 jobs:
   typing:
@@ -34,6 +30,8 @@ jobs:
           python-path: ${{ steps.venv.outputs.python-path }}
   tests:
     runs-on: ubuntu-latest
+    needs:
+      - typing
     strategy:
       fail-fast: false
       matrix:
@@ -64,3 +62,29 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  publish:
+    runs-on: ubuntu-latest
+    needs:
+      - tests
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python
+        id: setup-python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Install & Cache Dependencies
+        id: cache-deps
+        uses: allanchain/poetry-cache-action@release
+        with:
+          upload-strategy: on-success
+          cache-key-prefix: python3.10
+      - name: Build and publish to PyPI
+        run: |
+          poetry build
+          poetry publish --username __token__
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
