--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,13 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.md
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - README.md
 
 jobs:
   typing:
